Resolved table border issue on small-width windows.

--- a/styles/samples.scss
+++ b/styles/samples.scss
@@ -86,4 +86,9 @@ table.uix > thead > tr > th:nth-child(3)
 	{
 		background-color: inherit;
 	}
+	article > table.samples tbody tr:first-child
+	{
+		border-top: 0px;
+	}
+	
 }
